tests/paczka1/fuzzy1/43682179.err
Error in line 5: ePUoxGCG A432 92,1
Error in line 7: jpueyvp6D S722 41,3
Error in line 10: A107 A432 90,9
Error in line 15: A107 S352 50,9
Error in line 26: ePUoxGCG S352 371,50
Error in line 37: hU6rlNVc9o S7,, 7,8
